2XL29Nf7: Fixed issue with tooltip disappearing behind page manager.

--- a/plugin/swifty-page-manager/css/styles.css
+++ b/plugin/swifty-page-manager/css/styles.css
@@ -302,6 +302,7 @@ li.spm-show-page-in-menu-no > a.spm-page-tree-element > ins {
     -moz-border-radius: 5px;
     border-radius: 5px;
     font-size: 11px;
+    z-index: 1000;
 }
 
 .button-secondary.spm-tooltip-button {
